Implementing the Camera Infor Set Service. Not yet tested. WIP

--- a/cfg/ptgrey_bfly_camera_params.cfg
+++ b/cfg/ptgrey_bfly_camera_params.cfg
@@ -7,6 +7,7 @@ gen = ParameterGenerator()
 gen.add("run_mode", int_t,  -1 , "run mode: 0->SERVER, 1->PUBLISHER",  0, 0, 1)
 gen.add("rate", double_t, -1, "In case run_mode is set to PUBLISHER, indicates the publishing rate [hz]", 1.0, 0.1, 30.0 )
 gen.add("camera_frame_name", str_t, -1, "frame name of the camera", "ptgrey_bfly_camera" )
+gen.add("camera_info_file", str_t, -1, "Camera info file name, where calibration data is stored", "/home/andreu/dev/ptgrey_bfly_camera/calibration/bfly_1.yaml" )
 gen.add("video_mode", int_t,  -1 , "Video Mode (image size). Check camera documentation. Default MODE0", 0, 0, 5)
 gen.add("pixel_format", int_t, -1, "Pixel Format: 0->MONO8, 1->RGB8. Default MONO8", 0, 0, 1 )
 
