--- a/config/ptgrey_bfly_camera_params.yaml
+++ b/config/ptgrey_bfly_camera_params.yaml
@@ -2,7 +2,7 @@
 #*************** ptgrey_bfly_camera node and capture parameters ************************
 
 #run mode: run mode: 0->SERVER, 1->PUBLISHER
-run_mode: 0
+run_mode: 1
 
 #In case of PUBLISHER, the rate in hz. 
 #Video mode and pixel format may condition the final rate
@@ -11,8 +11,8 @@ rate: 10
 #frame name of the camera
 frame_name: "ptgrey_bfly_camera"
 
-#frame name of the camera
-camera_info_file: "/home/andreu/dev/ptgrey_bfly_camera/calibration/bfly_1.yaml"
+#file name of the camera calibration data
+camera_info_file: "/home/andreu/dev/ptgrey_bfly_camera/calibration/calibration_data_01.yaml"
 
 #Video Mode (image size). Check camera documentation. 
 video_mode: 0
