--- a/config/ptgrey_bfly_camera_params.yaml
+++ b/config/ptgrey_bfly_camera_params.yaml
@@ -11,8 +11,8 @@ rate: 10
 #frame name of the camera
 frame_name: "ptgrey_bfly_camera"
 
-#file name of the camera calibration data
-camera_info_file: "/home/andreu/dev/ptgrey_bfly_camera/calibration/calibration_data_01.yaml"
+#file name of the camera calibration data, assumed to be at folder this_package/calibration 
+camera_info_file: "calibration_data_01.yaml"
 
 #Video Mode (image size). Check camera documentation. 
 video_mode: 0
