--- a/package.xml
+++ b/package.xml
@@ -29,7 +29,8 @@
     <build_depend>std_msgs</build_depend>
     <build_depend>sensor_msgs</build_depend>
     <build_depend>image_transport</build_depend>
-    <build_depend>cv_bridge</build_depend>    
+    <build_depend>cv_bridge</build_depend>   
+    <build_depend>image_geometry</build_depend>   
     
     <run_depend>roscpp</run_depend>
     <run_depend>rospy</run_depend>    
@@ -40,6 +41,7 @@
     <run_depend>sensor_msgs</run_depend>
     <run_depend>image_transport</run_depend>
     <run_depend>cv_bridge</run_depend>    
+    <run_depend>image_geometry</run_depend>   
 
     <!-- The export tag contains other, unspecified, tags -->
     <export>
