--- a/package.xml
+++ b/package.xml
@@ -22,7 +22,8 @@
     <buildtool_depend>catkin</buildtool_depend>
     
     <build_depend>roscpp</build_depend>
-    <build_depend>rospy</build_depend>    
+    <build_depend>rospy</build_depend>
+    <build_depend>rosconsole</build_depend>        
 <!--     <build_depend>genmsg</build_depend>    -->
     <build_depend>dynamic_reconfigure</build_depend>      
     <build_depend>message_generation</build_depend>
@@ -33,7 +34,8 @@
     <build_depend>image_geometry</build_depend>   
     
     <run_depend>roscpp</run_depend>
-    <run_depend>rospy</run_depend>    
+    <run_depend>rospy</run_depend> 
+    <run_depend>rosconsole</run_depend>        
 <!--     <run_depend>genmsg</run_depend>    -->
     <run_depend>dynamic_reconfigure</run_depend>   
     <run_depend>message_runtime</run_depend>
