Added install targets for binary, lib, and config files

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -113,3 +113,21 @@ TARGET_LINK_LIBRARIES(${PROJECT_NAME}
 # Build examples
 ADD_SUBDIRECTORY(src/examples)
 
+# Install libraries, executables and configuration files
+install(TARGETS ${PROJECT_NAME} ${PROJECT_NAME}_LIB
+  ARCHIVE DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
+  LIBRARY DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
+  RUNTIME DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
+)
+
+install(DIRECTORY config/
+  DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}/config)
+
+install(DIRECTORY rviz/
+  DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}/rviz)
+
+install(DIRECTORY launch/
+  DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}/launch)
+
+install(DIRECTORY calibration/
+  DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}/calibration)
